test/sema/negative/unreachable.impala
fn f() -> int32 {
    return(17);
    42
}
